--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
  
 <!-- Setting the viewport like this will ensure mobile devices don't scale content -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" type="text/css" href="style.css">
   
   </head>
   <body>
