automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en"> <!--BOOSH -->
   <head>
+    <title>Cat Perry's Favorite Cats</title>
     <!-- UTF-8 is the standard for HTML5 web pages -->
 <meta charset="UTF-8">
  
